# FastApi-Poetry

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env  main.py  server.py
app/agent/: function_call.py
app/api/v1/routers/: ask_database.py  default.py  doris_test.py  test.py
app/core/: config.py
app/db/: base.py
app/task/: schedule.py  task_test.py
app/task/cron/: nifi_dingding_alarm.py
backend/: main.py
backend/api/core/: config.py
backend/task/: task_test.py
chromadb_data/: chroma.sqlite3
experiment/: function_calling.ipynb  vanna_doris_test.ipynb
