[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["wangmuyang <wangmuyang@wqmail.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
